Alterações nos mapas, página CMAR e correção da modal na página de detelhes da notícia

--- a/src/app/pages/cmar/cmar.component.html
+++ b/src/app/pages/cmar/cmar.component.html
@@ -2,7 +2,7 @@
     <div class="overlay overlay-min">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 ">
+                <div class="col-md-12 ">
 					<h1 style="text-align: -webkit-center;">
 						<img src="assets/images/banner_images/Cmar.png" alt="Logo do concilia" style="max-width:60%;margin-top: 150px;">
 					</h1>
@@ -14,59 +14,68 @@
 <section id="features" class="features" style="padding-top: 100px;">
     <div class="container">
         <div class="row">
-			<div class="col-sm-12">
+			<div class="col-md-12">
 	            <div class="head_title" style="margin-bottom: 25px;">
 	                <h3 style="font-size: 3rem; text-align: center;line-height: initial;">CMAR - COMUNIDADE DE MORADORES <br /> EM ÁREAS DE RISCO</h3>
 	                <div class="separator"></div>
 	            </div>
 	        </div>
-            <div class="col-sm-12">
+            <div class="col-md-12">
                 <div class="main_features_area sections" style="padding-top: 25px;padding-bottom: 100px;">
-                    <div class="row">
-                        <div class="col-sm-6">
+                    <div class="row" style="margin-bottom:25px;">
+                        <div class="col-md-6">
 							<span class="concilia-credit" style="margin-top:5%;">
 								<i class="fa fa-user"></i>
 								&nbsp;&nbsp;CMAR
 							</span>
-							<img src="assets/images/cmar001.png" alt="">
+							<img src="assets/images/cmar001.png" alt="" style="width: 100%">
 							<span class="concilia-caption">
 								<i class="fa fa-camera"></i>
-								&nbsp;&nbsp;Mães do Anel, durante passeata em memóra das vítimas de acidentes na rodovia.
+								&nbsp;&nbsp;Mães do Anel, em 2013, durante passeata em defesa de todos aqueles que tiveram suas vidas interrompidas
 							</span>
 
                         </div><br>
-                        <div class="col-sm-6">
-                            <p class="font-124">O movimento Comunidade de Moradores em Áreas de Risco (CMAR) se constituiu após a divulgação da notificação de desapropriação dos moradores do Anel Rodoviário de Belo Horizonte em função das obras de revitalização da via.</p>
-                            <p class="font-124">Inicialmente, o grupo era composto apenas por mulheres, todas elas mães. Conhecidas como Mães do Anel, elas começaram um movimento pelo direito à moradia, que cresceu com a adesão de novos membros. Esse novo grupo ganhou força e se institucionalizou, passando a se chamar Comunicade de Moradores em Áreas de Risco-CMAR.</p>
+                        <div class="col-md-6">
+                            <p class="font-124">O movimento Comunidade de Moradores em Áreas de Riscos (CMAR) se constituiu após a divulgação da ameaça de desapropriação dos moradores do Anel Rodoviário de Belo Horizonte em função das obras de revitalização da via.</p>
+                            <p class="font-124">Inicialmente, o grupo era composto apenas por mulheres e todas elas mães. Conhecidas como Mães do Anel, elas iniciaram a luta pelo direito à moradia. Aos poucos o movimento foi crescendo e ganhando mais integrantes. Os novos membros deram força ao grupo que passou a se chamar CMAR.</p>
                         </div>
                     </div>
+					<div class="row" style="margin-bottom:25px;">
+						<div class="col-md-6">
+							<p class="font-124" style="padding-top:10px;">Os moradores perceberam que cada comunidade lutando sozinha, não poderia conseguir qualquer possibilidade de negociação que os favorecessem com respeito e bem estar de todos.  E a remoção aconteceria sem qualquer possibilidade atendimento com dignidade.</p>
+							<p class="font-124">O problema que atingia cada uma das comunidades constitui um problema de todas. Nesse sentido, todas as lideranças das diversas comunidades se reuniram para, juntos, buscar uma solução, que atendesse o conjunto de todas as famílias atingidas pelas obras de melhorias das rodovias.</p>
+						</div>
+						<div class="col-md-6">
+							<span class="concilia-credit">
+								<i class="fa fa-user"></i>
+								&nbsp;&nbsp;CMAR
+							</span>
+							<img src="assets/images/cmar002.png" alt="" style="width: 100%" >
+							<span class="concilia-caption">
+								<i class="fa fa-camera"></i>
+								&nbsp;&nbsp;Reunião com Ministério Público Federal e Defensoria Pública da União, em 2009.
+							</span>
+						</div>
+					</div>
+					<div class="row" style="margin-bottom:25px;">
+						<div class="col-md-6">
+							<span class="concilia-credit">
+								<i class="fa fa-user"></i>
+								&nbsp;&nbsp;CMAR
+							</span>
+							<img src="assets/images/cmar003.png" alt="" style="width: 100%">
+							<span class="concilia-caption">
+								<i class="fa fa-camera"></i>
+								&nbsp;&nbsp;O CMAR tem o título da segunda maior audiência Pública na Câmara Municipal, realizada em 2008.
+							</span>
+
+						</div>
+						<div class="col-md-6">
+							<p class="font-124" style="padding-top:10px;">A estimativa do grupo é que, atualmente, cerca de 38 comunidades vivam às margens do Anel Rodoviário da capital mineira. Todo o trabalho realizado visa a busca pelos direitos sociais de todas essas famílias em situação de vulnerabilidade. Hoje, o movimento CMAR conta com a participação de moradores da Vila da Paz, Vila da Luz, Vila São José, Madre Gertrudes, Vila Aldeia, Vila Nova Paraíso, Vila Biquinha, Vila da Rua Professor Paixão e Pátio da Estação.</p>
+						</div>
+					</div>
                 </div>
             </div>
         </div>
     </div>
-</section>
-<section id="about" class="about">
-	<div class="container">
-		<div class="row">
-			<div class="main_about_area sections" style="padding-top: 0;">
-				<div class="col-sm-6">
-					<p class="font-124">Os moradores passaram a se organizar cada vez mais com a adesão de um número crescente de comunidades ao CMAR. Desta forma aumentaram o poder de barganha nas negociações com os órgãos e entidades governamentais.</p>
-					<p class="font-124">As comunidades se reuniram no CMAR por uma causa comum. Todas as lideranças comunitárias buscavam uma soluçao que atendesse o conjunto de todas as famílias atingidas pelas obras de melhoria das rodovias BR-381 e Anel Rodoviário.</p>
-					<p class="font-124">No segundo semestre de 2016, o CMAR contava com a participação das Vila da Paz, Vila da Luz, Vila São José, Madre Gertrudes, Vila Aldeia, Vila Nova Paraíso, Vila Biquinha, Vila da Rua Professor Paixão e Pátio da Estação, no movimento em favor da desapropriação e reassentamento humanizados, consolidado no programa Concilia BR-381 e Anel.</p>
-				</div>
-				<div class="col-sm-6">
-					<span class="concilia-credit">
-						<i class="fa fa-user"></i>
-						&nbsp;&nbsp;CMAR
-					</span>
-					<img src="assets/images/cmar002.png" alt="" >
-					<span class="concilia-caption">
-						<i class="fa fa-camera"></i>
-						&nbsp;&nbsp;Reunião com o Ministério Público Federal e Defensoria Pública da União, em 2009.
-					</span>
-
-				</div>
-			</div>
-		</div>
-	</div>
 </section>
