--- a/src/app/pages/properties/properties.component.html
+++ b/src/app/pages/properties/properties.component.html
@@ -111,47 +111,33 @@
 														<p class="font-124">
 															<strong>Região Metropolitana de Belo Horizonte:</strong><br /> Baldim, Belo Horizonte, Betim, Brumadinho, Caeté, Capim Branco, Confins, Contagem, Esmeraldas, Florestal, Ibirité, Igarapé, Itaguara, Itatiaiuçu, Jaboticatubas, Juatuba, Lagoa Santa, Mário Campos, Mateus Leme, Matozinhos, Nova Lima, Nova União, Pedro Leopoldo, Raposos, Ribeirão das Neves, Rio Acima, Rio Manso, Sabará, Santa Luzia, São Joaquim de Bicas, São José da Lapa, Sarzedo, Taquaraçu de Minas e Vespasiano.
 														</p>
+														<p class="font-124">Clique no mapa para uma melhor visualização.</p>
 													</div>
 													<div class="col-sm-6" style="margin-bottom:20px;">
 														<div class="single_tab_img">
-															<span class="concilia-credit">
-																<i class="fa fa-user"></i>
-																&nbsp;&nbsp; Hevelyn Leão
-															</span>
 															<div class="gallery">
-																<a href="assets/images/mapas/regiaoMetropolitana.jpg">
-																	<img src="assets/images/mapas/colarMetropolitanoThumb.png" alt="" />
+																<a href="assets/images/mapas/regiaoMetropolitana.png">
+																	<img src="assets/images/mapas/regiaoMetropolitana.png" alt="" />
 																</a>
 
 															</div>
-															<span class="concilia-caption">
-																<i class="fa fa-camera"></i>
-																&nbsp;&nbsp; Mapa da região metropolitana de Belo Horizonte - MG
-															</span>
 														</div>
 													</div>
 													<div class="col-sm-6">
 														<div class="single_tab_img">
-															<span class="concilia-credit">
-																<i class="fa fa-user"></i>
-																&nbsp;&nbsp; Hevelyn Leão
-															</span>
 															<div class="gallery">
-																<a href="assets/images/mapas/colarMetropolitano.jpg">
-																	<img src="assets/images/mapas/regiaoMetropolitanaThumb.png" alt="" />
+																<a href="assets/images/mapas/colarMetropolitano.png">
+																	<img src="assets/images/mapas/colarMetropolitano.png" alt="" />
 																</a>
 
 															</div>
-															<span class="concilia-caption">
-																<i class="fa fa-camera"></i>
-																&nbsp;&nbsp; Mapa do colar metropolitano de Belo Horizonte - MG
-															</span>
 														</div>
 													</div>
 													<div class="col-md-6">
 														<p class="font-124">
 															<strong>Colar Metropolitano da Região de Belo Horizonte:</strong><br /> Barão de Cocais, Belo Vale, Bom Jesus do Amparo, Bonfim, Fortuna de Minas, Funilândia, Inhaúma, Itabirito, Itaúna, Moeda, Pará de Minas, Prudente de Morais, Santa Bárbara, São Gonçalo do Rio Abaixo, São José da Varginha e Sete Lagoas.
 														</p>
+														<p class="font-124">Clique no mapa para uma melhor visualização.</p>
 													</div>
 
 												</div>
