--- a/src/app/pages/news-detail/news-detail.component.html
+++ b/src/app/pages/news-detail/news-detail.component.html
@@ -72,8 +72,8 @@
 				<!-- Fim do conteúdo da notícia -->
 			</div>
 		</div>
-		
-		
+
+
 		<div class="row">
 			<div class="col-md-12" style="font-size: 1.24rem">
 				Data da notícia: {{news?.published_at | humanizeDate}} <br />
@@ -94,7 +94,7 @@
 		</div>
 	</div>
 </section>
-<div class="modal fade" tabindex="-1" role="dialog">
+<div id="about-concilia" class="modal fade" tabindex="-1" role="dialog">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
