Alterações nos mapas, inserção do link da CMAR, legenda critérios e regras

--- a/src/app/components/slide/slide.component.html
+++ b/src/app/components/slide/slide.component.html
@@ -1,4 +1,7 @@
-
+<span class="concilia-credit">
+	<i class="fa fa-user"></i>
+	&nbsp;&nbsp;Hevelyn Leão
+</span>
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
     <!-- Wrapper for slides -->
@@ -29,3 +32,4 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+</div>
