--- a/src/app/pages/criteria/criteria.component.html
+++ b/src/app/pages/criteria/criteria.component.html
@@ -29,7 +29,7 @@
 							<img src="assets/images/criterios_regras.jpg" alt="">
 							<span class="concilia-caption">
 								<i class="fa fa-camera"></i>
-								&nbsp;&nbsp;
+								&nbsp;&nbsp;Audiência de homologação dos critérios e regras e do regimento do Conselho Executivo.
 							</span>
 
 						</div><br>
