--- a/src/app/pages/properties/properties.component.html
+++ b/src/app/pages/properties/properties.component.html
@@ -116,18 +116,25 @@
 													<div class="col-sm-6" style="margin-bottom:20px;">
 														<div class="single_tab_img">
 															<div class="gallery">
-																<a href="assets/images/mapas/regiaoMetropolitana.png">
-																	<img src="assets/images/mapas/regiaoMetropolitana.png" alt="" />
+																<a href="assets/images/mapas/regiaoMetropolitana.jpg">
+																	<img src="assets/images/mapas/regiaoMetropolitana.jpg" alt="" />
 																</a>
-
+																<span class="concilia-caption">
+																	<i class="fa fa-camera"></i>
+																	&nbsp;&nbsp;Mapa da região metropolitana de Belo Horizonte - MG.
+																</span>
 															</div>
 														</div>
 													</div>
 													<div class="col-sm-6">
 														<div class="single_tab_img">
 															<div class="gallery">
-																<a href="assets/images/mapas/colarMetropolitano.png">
-																	<img src="assets/images/mapas/colarMetropolitano.png" alt="" />
+																<span class="concilia-caption">
+																	<i class="fa fa-camera"></i>
+																	&nbsp;&nbsp;Mapa do colar metropolitano de Belo Horizonte - MG.
+																</span>
+																<a href="assets/images/mapas/colarMetropolitano.jpg">
+																	<img src="assets/images/mapas/colarMetropolitano.jpg" alt="" />
 																</a>
 
 															</div>
