Arrumando texto no template

--- a/src/app/pages/criteria/criteria.component.html
+++ b/src/app/pages/criteria/criteria.component.html
@@ -40,7 +40,7 @@
 							<ul class="single_ab_mision">
 								<li class="font-124">
 									<i class="fa fa-check-square"></i>
-									o a acesso das famílias ao banco de imóveis;
+									o acesso das famílias ao banco de imóveis;
 								</li>
 								<li class="font-124">
 									<i class="fa fa-check-square"></i>
