Link CMAR e inversão MPF

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,7 +20,7 @@
 				<div class="col-sm-4">
 					  <ul>
 						 <li><a target="_blank" href="http://portalpbh.pbh.gov.br/pbh/ecp/comunidade.do?app=urbel" class="links-uteis">URBEL</a></li>
-						 <li><a target="_blank" href="http://comunidadecmar.blogspot.com.br" class="links-uteis">CMAR</a></li>
+						 <li><a target="_blank" href="https://cmarcomunidade.wixsite.com/cmar" class="links-uteis">CMAR</a></li>
 						 <li><a target="_blank" href="http://www.nova381.org.br/site" class="links-uteis">Movimento Nova 381</a></li>
 						 <li><a target="_blank" href="http://www.servas.org.br" class="links-uteis">Serviço Voluntário de Assistência Social</a></li>
 						 <li><a target="_blank" href="http://defesacivil.mg.gov.br/" class="links-uteis">Defesa Civil</a></li>
