--- a/src/app/pages/cmar/cmar.component.html
+++ b/src/app/pages/cmar/cmar.component.html
@@ -73,7 +73,7 @@
 						<div class="col-md-6">
 							<p class="font-124" style="padding-top:10px;">A estimativa do grupo é que, atualmente, cerca de 38 comunidades vivam às margens do Anel Rodoviário da capital mineira. Todo o trabalho realizado visa a busca pelos direitos sociais de todas essas famílias em situação de vulnerabilidade. Hoje, o movimento CMAR conta com a participação de moradores da Vila da Paz, Vila da Luz, Vila São José, Madre Gertrudes, Vila Aldeia, Vila Nova Paraíso, Vila Biquinha, Vila da Rua Professor Paixão e Pátio da Estação.</p>
 
-							<a target="_blank" href="http://comunidadecmar.blogspot.com.br">
+							<a target="_blank" href="https://cmarcomunidade.wixsite.com/cmar">
 								<b>
 									 <h5 class="text-center" style="margin:50px"><i class="fa fa-link fa-2x" aria-hidden="true" style="color: #444;"></i>&nbsp;&nbsp;
 										Acesse o site do CMAR
