--- a/src/app/pages/partners/partners.component.html
+++ b/src/app/pages/partners/partners.component.html
@@ -59,6 +59,33 @@
 				</div>
 			</div>
 			<div class="col-sm-6">
+				<div class="row">
+					<a href="http://www.mpf.mp.br/mg" title="Clique aqui para acessar" target="_blank">
+						<img src="assets/images/logomarcas/mpf.png" alt="MPF">
+					</a>
+				</div>
+				<div class="row">
+					<p style="font-size: 1.24rem;margin-top:20px;padding:20px;">
+						O Ministério Público Federal e a Defensoria Pública da União foram os autores da Ação Civil Pública que culminou na criação do Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381, e, atualmente, são parceiros do programa. A atuação do MPF objetiva, em suma, a garantia do direito à moradia adequada da população que reside às margens do Anel Rodoviário de Belo Horizonte e da BR-381 Norte, quando da remoção de seu local de moradia em razão de obras viárias que serão ali realizadas.
+					</p>
+				</div>
+
+			</div>
+		</div>
+		<div class="row row-partners">
+			<div class="col-sm-6">
+				<div class="row">
+					<a href="https://cmarcomunidade.wixsite.com/cmar" title="Clique aqui para acessar" target="_blank">
+						<img src="assets/images/logomarcas/CMAR2.png" alt="CMAR">
+					</a>
+				</div>
+				<div class="row">
+					<p style="font-size: 1.24rem;margin-top:20px;padding:20px;">
+						A Comunidade de Moradores de Áreas de Risco - CMAR reúne representantes de diversas comunidades para buscar uma solução que venha atender o conjunto de todas as famílias que serão removidas e reassentadas em função das obras de revitalização do Anel Rodoviário de Belo Horizonte. Hoje, o movimento conta com a participação de moradores de diversas comunidades.
+					</p>
+				</div>
+			</div>
+			<div class="col-sm-6">
 				<div class="row" style="height:112px;">
 					<a href="http://portalpbh.pbh.gov.br/pbh/ecp/comunidade.do?app=urbel" title="Clique aqui para acessar" target="_blank">
 						<div class="col-sm-6">
@@ -72,32 +99,6 @@
 				<div class="row">
 					<p style="font-size: 1.24rem;margin-top:20px;padding:20px;">
 						A Urbel é o órgão da Prefeitura de Belo Horizonte responsável pelos diagnósticos sociais das famílias que vivem na faixa de domínio do Anel Rodoviário da capital mineira. É responsável pelo acompanhamento do pré e pós morar das famílias beneficiárias do Programa, com base no cadastro dos moradores. Essas informações estão em constante atualização e são elas que subsidiam as ações sociais. Com base nos dados, o órgão realiza o trabalho comunitário com as famílias nas áreas de saúde, assistência social, assessoria jurídica, educação, cultura e meio ambiente.
-					</p>
-				</div>
-			</div>
-		</div>
-		<div class="row row-partners">
-			<div class="col-sm-6">
-				<div class="row">
-					<a href="http://comunidadecmar.blogspot.com.br" title="Clique aqui para acessar" target="_blank">
-						<img src="assets/images/logomarcas/CMAR2.png" alt="CMAR">
-					</a>
-				</div>
-				<div class="row">
-					<p style="font-size: 1.24rem;margin-top:20px;padding:20px;">
-						A Comunidade de Moradores de Áreas de Risco - CMAR reúne representantes de diversas comunidades para buscar uma solução que venha atender o conjunto de todas as famílias que serão removidas e reassentadas em função das obras de revitalização do Anel Rodoviário de Belo Horizonte. Hoje, o movimento conta com a participação de moradores de diversas comunidades.
-					</p>
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="row">
-					<a href="http://www.mpf.mp.br/mg" title="Clique aqui para acessar" target="_blank">
-						<img src="assets/images/logomarcas/mpf.png" alt="MPF">
-					</a>
-				</div>
-				<div class="row">
-					<p style="font-size: 1.24rem;margin-top:20px;padding:20px;">
-						O Ministério Público Federal é responsável por fiscalizar as obras da duplicação da BR-381 e Anel Rodoviário. Sua função é acompanhar os pagamentos, cronogramas e, ainda, os impactos nos meios de transporte da obra.
 					</p>
 				</div>
 			</div>
