Atualização nas notícias

--- a/src/app/pages/news-detail/news-detail.component.css
+++ b/src/app/pages/news-detail/news-detail.component.css
@@ -40,6 +40,9 @@
 	background: #ff7200;
 	content: "";
 }
+.text-center{
+	text-align: center;
+}
 .concilia-caption, .concilia-credit{
 	font-size: 0.875rem!important;
 	color: #444!important;
