--- a/src/app/pages/home/highlights-news/highlights-news.component.html
+++ b/src/app/pages/home/highlights-news/highlights-news.component.html
@@ -1,5 +1,5 @@
 <section id="portfolio" class="portfolio lightbg" style="padding-top:100px;padding-bottom:50px">
-	<div class="container-fluid">
+	<div class="container">
         <div class="row">
                 <div class="col-sm-6">
                     <div class="head_title" style="margin-left: 15px;">
@@ -9,15 +9,17 @@
                 </div>
 		</div>
 		<div class="row" style="margin-bottom: 50px;">
-			<div *ngFor="let item of news" class="col-lg-4 col-md-6 col-sm-12 bcards" >
-				<div class="view view-first">
-				  <img style="width:500px; height:300px" src="{{basePathImage}}{{item.image}}" />
-				  <div class="mask">
-					<h2>{{item.title}}</h2>
-					<a [routerLink]="['/noticias', item.slug]" class="info">Leia Mais...</a>
-				  </div>
-				</div>
-            </div>
+			<div *ngFor="let item of news" class="col-sm-12 col-md-6 col-lg-4" >
+				<figure class="snip1208">
+					<img src="{{basePathImage}}{{item.image}}" alt="sample66"/>
+					<div class="date"><span class="day">{{item.published_at | humanizeDate}}</span></div>
+					<figcaption>
+						<h3>{{item.title}}</h3>
+						<!-- <p>{{item.subTitle}}</p> -->
+						<button class="btn btn-block">Leia mais</button>
+					</figcaption><a [routerLink]="['/noticias', item.slug]"></a>
+				</figure>
+			</div>
 		</div>
     </div>
 </section>
