--- a/src/app/pages/notice/notice.component.html
+++ b/src/app/pages/notice/notice.component.html
@@ -50,7 +50,7 @@
 						<tr *ngFor="let noticeConc of noticesConcorrencia">
 							<td class="font-124">{{noticeConc.publishDate | humanizeDate}}</td>
 							<td class="font-124">{{noticeConc.date | humanizeDate}}</td>
-							<td class="font-124" style="width:300px;">{{noticeConc.description}}</td>
+							<td class="font-124">{{noticeConc.description}}</td>
 							<td class="text-center font-124">
 								<a target="_blank" href="{{noticeConc.notice}}">
 									<i class="fa fa-file-pdf-o fa-2x" aria-hidden="true" style="color: #444;"></i>
