Alteração da galeria e inserção das logos

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -29,7 +29,7 @@
 				</div>
 				 <div class="col-sm-4">
 					 <ul>
-						 <li><a target="_blank" href="http://uaitec.mg.gov.br/inicio/cursos" class="links-uteis">Cursos gratuitos da Universidade aberta de Minas Gerais</a></li>
+						 <li><a target="_blank" href="https://viladaluzcomunicac.wixsite.com/vila-da-luz-e-anel" class="links-uteis">Movimento de moradia vila da Luz e Anel Rodoviário</a></li>
 						 <li><a target="_blank" href="http://www.ebc.com.br/noticias/meio-ambiente/2015/03/dez-dicas-para-economizar-agua-em-casa" class="links-uteis">Dicas para economizar água</a></li>
 						 <li><a target="_blank" href="http://www.copasa.com.br/media2/PesquisaEscolar/COPASA_Agua.pdf" class="links-uteis">Cartilha Saneamento e vida saudável</a></li>
 						 <li><a target="_blank" href="http://www.cemig.com.br/pt-br/A_Cemig_e_o_Futuro/sustentabilidade/nossos_programas/Eficiencia_Energetica/Documents/CD-0028-15%20DICAS%20DE%20ENERGIA_CARTILHA%2015x21cm%2009-03_LOS_marca%20nova.pdf" class="links-uteis">Cartilha da economia de energia</a></li>
@@ -40,16 +40,19 @@
 			</div>
 		</div>
 	</section>
-		<div class="container">
+		<div class="container" style="text-align:center">	
 			<div class="row">
-				<div class="col-md-2">
-					<p class="label-rodape">Apoio:</p>
-					<a href="http://comunidadecmar.blogspot.com.br" target="_blank" title="" style="text-decoration:none;">
+				<div class="col-md-12">
+					<p class="label-rodape" style="text-align:center">Apoio:</p>
+					<a href="http://comunidadecmar.blogspot.com.br" target="_blank" title="" style="width: 100px;display: inline-block;text-decoration:none;">
 						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/CMAR2.png" alt="" />
 					</a>
-				</div>
-				<div class="col-md-offset-1 col-md-8">
-					<p class="label-rodape">Parceria:</p>
+					<a target="_blank" title="" style="width: 190px;display: inline-block;text-decoration:none;">
+						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/cori_horizontal.png" alt="" />
+					</a>
+				</div><br /><br/>
+				<div class="col-md-12">
+					<p class="label-rodape" style="text-align:center">Parceria:</p>
 					<a href="http://portalpbh.pbh.gov.br/pbh/ecp/comunidade.do?app=urbel" target="_blank" title="" style="text-decoration:none;">
 						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/1.png" alt="" style="display:inline-block;margin-right:17px;"/>
 					</a>
@@ -66,10 +69,10 @@
 						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/4.png" alt="" style="display:inline-block;margin-right:34px;"/>
 					</a>
 				</div>
-			</div><br/>
+			</div><br/><br/><br/>
 			<div class="row">
 				<div class="col-md-12">
-					<p class="label-rodape">Realização:</p>
+					<p class="label-rodape" style="text-align:center">Realização:</p>
 					<a href="https://portal.trf1.jus.br/sjmg" target="_blank" title="" style="text-decoration:none;">
 						<img class="footer-image-realizacao img-responsive" src="assets/images/logomarcas/realizacao/1.png" alt="" style="display:inline-block;margin-right:17px;"/>
 					</a>
