--- a/src/app/pages/partners/partners.component.html
+++ b/src/app/pages/partners/partners.component.html
@@ -102,6 +102,18 @@
 					</p>
 				</div>
 			</div>
+			<div class="col-sm-6">
+				<div class="row">
+					<a title="Clique aqui para acessar" target="_blank">
+						<img src="assets/images/logomarcas/cori_horizontal.png" alt="CMAR">
+					</a>
+				</div>
+				<div class="row">
+					<p style="font-size: 1.24rem;margin-top:20px;padding:20px;">
+						O CORI-MG é uma associação de direito privado, sem fins lucrativos, com sede em Belo Horizonte, que tem como  responsabilidade atividades que visem ao desenvolvimento da atividade e da técnica registral imobiliária. Como metas prioritárias, o Colégio Registral Imobiliário de Minas Gerais promove a busca constante da uniformização dos procedimentos nos diversos ofícios de Registro de Imóveis mineiros, por meio da publicação periódica de informativos, jurisprudência, artigos e enunciados específicos. Além disso, incentiva os associados a buscarem a melhoria constante na prestação dos serviços aos usuários, quer na qualidade, quer na agilidade. No Concilia BR-381 e Anel, o CORI-MG contribui para que a remoção e o reassentamento das famílias siga a legislação vigente e auxilia na elaboração dos projetos de regularização dos novos imóveis.
+					</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
