--- a/src/app/pages/executive-council/executive-council.component.html
+++ b/src/app/pages/executive-council/executive-council.component.html
@@ -30,10 +30,11 @@
 						<i class="fa fa-user"></i>
 						&nbsp;&nbsp;Alexandre Dutra
 					</span>
-					<img src="assets/images/executive_concil.jpg" alt="" >
+					<!--<img src="assets/images/executive_concil.jpg" alt="" >-->
+					<img src="assets/images/banner_images/conselho2.jpg" alt="">
 					<span class="concilia-caption" style="margin-bottom:20px;">
 						<i class="fa fa-camera"></i>
-						&nbsp;&nbsp;Primeira reunião do Conselho Executivo na SREMG do DNIT.
+						&nbsp;&nbsp;11ª Reunião Ordinária do Conselho Executivo na sede do DNIT-MG.
 					</span>
 					<p class="font-124">Para minimizar os conflitos e facilitar o entendimento entre os diversos atores que compõem o Concilia BR-381 e Anel foi criado um Conselho Executivo, de caráter deliberativo, cuja principal função é buscar o consenso entre seus membros.</p>
 				</div>
@@ -43,7 +44,7 @@
 				<!-- </div>
 				<div class="col-sm-6"> -->
 					<p class="font-124">Foram estabelecidos critérios e regras que orientam e facilitam a execução do Programa em cada uma de suas etapas. Essas diretrizes foram elaboradas pelos parceiros, revisadas pelos membros do Conselho Executivo e homologadas pela Justiça Federal.</p>
-					<p class="font-124">O Conselho é composto por um representante de cada instituição parceira do Concilia BR-381 e Anel e suas reuniões se realizam na Superintendencia Regional do Estado de Minas Gerais(SREMG) periodicamente e em situações extraordinárias quando necessário.</p>
+					<p class="font-124">O Conselho é composto por um representante de cada instituição parceira do Concilia BR-381 e Anel e suas reuniões são realizadas na sede do DNIT/MG periodicamente e em situações extraordinárias quando necessário.</p>
 					<p class="font-124">As deliberações do Conselho Executivo vão desde a conciliação e o cumprimento do Acordo Judicial homologado em juízo até a análise de casos excepcionais e decisões estratégicas.</p>
 				</div>
 			</div>
