--- a/src/app/pages/gallery-detail/gallery-detail.component.html
+++ b/src/app/pages/gallery-detail/gallery-detail.component.html
@@ -12,7 +12,7 @@
 	</div>
 </section>
 <section id="choose" class="choose">
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="main_choose sections">
 				<div class="col-sm-12">
