--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -47,7 +47,8 @@
 										<a class="dropbtn" style="cursor:pointer;">Imóveis</a>
 										<ul class="dropdown-content ul-submenu" style="right: auto;">
 											<li><a [routerLink]="['/imoveis']">Imóveis</a></li>
-											<li><a [routerLink]="['/imoveis-documentacao']">Documentação</a></li>
+                                            <li><a [routerLink]="['/imoveis-documentacao']">Documentação</a></li>
+                                            <li><a [routerLink]="['/pos-morar']">Pós morar</a></li>
 										</ul>
 									</li>
 
