--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -30,7 +30,7 @@
 				 <div class="col-sm-4">
 					 <ul>
 						 <li><a target="_blank" href="https://viladaluzcomunicac.wixsite.com/vila-da-luz-e-anel" class="links-uteis">Movimento de moradia vila da Luz e Anel Rodoviário</a></li>
-						 <li><a target="_blank" href="http://www.ebc.com.br/noticias/meio-ambiente/2015/03/dez-dicas-para-economizar-agua-em-casa" class="links-uteis">Dicas para economizar água</a></li>
+						 <li><a target="_blank" href="http://www.corimg.org/" class="links-uteis">CORI - Colégio Registral Imobiliário de Minas Gerais</a></li>
 						 <li><a target="_blank" href="http://www.copasa.com.br/media2/PesquisaEscolar/COPASA_Agua.pdf" class="links-uteis">Cartilha Saneamento e vida saudável</a></li>
 						 <li><a target="_blank" href="http://www.cemig.com.br/pt-br/A_Cemig_e_o_Futuro/sustentabilidade/nossos_programas/Eficiencia_Energetica/Documents/CD-0028-15%20DICAS%20DE%20ENERGIA_CARTILHA%2015x21cm%2009-03_LOS_marca%20nova.pdf" class="links-uteis">Cartilha da economia de energia</a></li>
 						 <li><a target="_blank" href="http://www.prohomeimoveis.com.br/prohome-ambiental/cartilha-reciclagem-de-lixo/" class="links-uteis">Cartilha reciclagem de lixo</a></li>
@@ -47,7 +47,7 @@
 					<a href="http://comunidadecmar.blogspot.com.br" target="_blank" title="" style="width: 100px;display: inline-block;text-decoration:none;">
 						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/CMAR2.png" alt="" />
 					</a>
-					<a target="_blank" title="" style="width: 190px;display: inline-block;text-decoration:none;">
+					<a href="http://www.corimg.org/" target="_blank" title="" style="width: 190px;display: inline-block;text-decoration:none;">
 						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/cori_horizontal.png" alt="" />
 					</a>
 				</div><br /><br/>
