--- a/src/app/pages/documents/documents.component.html
+++ b/src/app/pages/documents/documents.component.html
@@ -156,7 +156,9 @@
 														<i class="fa fa-user"></i>
 														&nbsp;&nbsp;
 													</span> -->
-													<img src="assets/images/cadunico.jpg" alt="" />
+													<a href="http://www.caixa.gov.br/cadastros/cadastro-unico/" title="Clique aqui para acessar" target="_blank">
+														<img src="assets/images/cadunico.jpg" alt="" />
+													</a>
 													<!-- <span class="concilia-caption">
 														<i class="fa fa-camera"></i>
 														&nbsp;&nbsp;
