--- a/src/app/pages/partners/partners.component.html
+++ b/src/app/pages/partners/partners.component.html
@@ -104,7 +104,7 @@
 			</div>
 			<div class="col-sm-6">
 				<div class="row">
-					<a title="Clique aqui para acessar" target="_blank">
+					<a href="http://www.corimg.org/" title="Clique aqui para acessar" target="_blank">
 						<img src="assets/images/logomarcas/cori_horizontal.png" alt="CMAR">
 					</a>
 				</div>
