Alteração de foto no pós morar, criação de push mensagens e inserção do mapa

--- a/src/app/pages/after-living/after-living.component.html
+++ b/src/app/pages/after-living/after-living.component.html
@@ -28,25 +28,24 @@
 				<div class="col-sm-6">
 					<p class="font-124">O Concilia BR-381 e Anel procura minimizar os possíveis impactos causados pelo processo de remoção das famílias que residiam em áreas de risco às margens da BR-381 e do Anel Rodoviário de Belo Horizonte. Faz parte do programa a assistência às famílias em situação de vulnerabilidade social, prevista no processo de reassentamento como mecanismo facilitador para acompanhar a sua adaptação à nova moradia.</p>
 					<p class="font-124">Esse acompanhamento Pós-Morar é desenvolvido pelo DNIT e pela URBEL, por meio de equipe multidisciplinar, devidamente treinada, para lidar com as famílias reassentadas. O Pós-Morar leva em consideração a alteração nos laços  sociais, econômicos, culturais dos beneficiários e não somente o aspecto físico-espacial. </p>
+					<p class="font-124">Esse acompanhamnto envolve atividades de monitoramento, integração e inserção das famílias nos novos ambientes. Dentre as atividades previstas destacam-se:</p>
 				</div>
 				<div class="col-sm-6">
-					<!-- <span class="concilia-credit" style="padding-top:10%;">
+					<span class="concilia-credit">
 						<i class="fa fa-user"></i>
-						&nbsp;&nbsp;Felipe Chimicatti
-					</span>-->
+						&nbsp;&nbsp;Alexandre Dutra
+					</span>
 					<img src="assets/images/page_posmorar.jpg" alt="">
-					<!--<span class="concilia-caption">
+					<span class="concilia-caption">
 						<i class="fa fa-camera"></i>
-						&nbsp;&nbsp;Moradias às margens de uma das vias mais movimentadas do país: O Anel Rodoviário de BH.
-					</span>-->
+						&nbsp;&nbsp;A camareira Rosinha Ramalho cozinhando na casa nova.
+					</span>
 
 				</div>
 			</div>
 		</div><br />
 		<div class="row">
 			<div class="col-md-12">
-				<p class="font-124">Esse acompanhamnto envolve atividades de monitoramento, integração e inserção das famílias nos novos ambientes. Dentre as
-					atividades previstas destacam-se:</p>
 				<ul class="single_ab_mision">
 					<li class="col-sm-6 font-124">
 						<i class="fa fa-check-square"></i>
