--- a/src/app/pages/home/about/about.component.html
+++ b/src/app/pages/home/about/about.component.html
@@ -25,7 +25,8 @@
 								<div role="tabpanel" class="tab-pane active" id="concilia-aba">
 									<div class="single_service_tab">
 										<div class="row">
-											<div class="col-sm-6">
+											<img src="assets/images/mapa_section.jpg" alt="" />
+											<!--<div class="col-sm-6">
 												<div class="single_tab_content">
 													<div class="head_title" style="margin-bottom: 10px;">
 														<h3 class="font2-3">Concilia</h3>
@@ -37,13 +38,14 @@
 
 											<div class="col-sm-6">
 												<div class="single_tab_img">
-													<!-- <span>
+													<span>
 														<i class="fa fa-user"></i>
 														&nbsp;&nbsp;Hevelyn
-													</span> -->
+													</span>
 													<img src="assets/images/mapa.jpg" alt="" />
 												</div>
-											</div>
+											</div>-->
+
 										</div>
 									</div>
 								</div>
